src/ts/tests/fixtures/invalid_service_initializer/non_inject_param.ts
// @ts-nocheck
// InvalidServiceInitializer
@Service
export class FooService {
  init(invalid: string): void {}
}
